crates/plotnik-tests/tests/03-analyze/self_recursion/no_escape_bare_self_reference.txt
E = (E)
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:1:6
  |
1 | E = (E)
  |      ^
  |      |
  |      E references itself
  |
help: add a non-recursive alternative to terminate: `[Base: ... Rec: (Self)]`
-------------------- SYMBOLS ---------------------
E
  E (cycle)
